--- a/README.org
+++ b/README.org
@@ -1,99 +1,85 @@
-* Taoline: Minimalist Functional Modeline for Emacs
+* Taoline: Легчайшая Строка — функциональный минимализм для Emacs
 
-Taoline – ультра-минималистичная и функциональная замена стандартной mode-line для Emacs. Вместо обилия информации на панелях, taoline показывает только нужные сведения в компактном виде — внизу окна, в echo area, в заголовке окна или даже в отдельной child-frame (через posframe). Вся архитектура построена на чистых функциях и предоставляет удобный функциональный API для расширения и тестирования.
+В истинном равновесии не нужно ничего лишнего — и taoline отражает лишь то, что действительно занимает твоё внимание сейчас. Эта модельная строка выскакивает в echo area тогда, когда ей есть что сообщить, — но исчезает, не оставив следа, как тихий поток.
 
-** Основные возможности
+** Что делает taoline?
 
-- Минималистичный внешний вид, неярко выделяясь и не отвлекая.
-- Полностью функциональный стиль: сегменты — это чистые функции, легко тестируемые и подменяемые.
-- Несколько бэкендов отображения: классическая modeline, echo area, header-line, posframe.
-- Не использует таймеров: обновляется только по хукам действий пользователя.
-- Удобное расширение: новые сегменты легко добавляются через макрос.
-- Cпециальный отладочный лог в buffer `*taoline-logs*` (если включён).
+- Показывает только необходимое — в моменте и внизу окна (echo area).
+- Архитектура строится на чистых функциях: каждый сегмент работает с буфером, не трогая глобальное состояние.
+- За основу взята простота: сегменты легко добавлять, менять местами, убирать.
+- Настройка интуитивна — ясна любому, даже тому, кто впервые увидел Emacs.
+- Отсутствие таймеров: обновление происходит мягко — только при действиях пользователя.
 
-** Начало работы
+** Первый шаг
 
-Установка через straight.el, quelpa или package.el (ELPA/MELPA):
+Установить taoline можно так:
 
 #+BEGIN_SRC emacs-lisp
 (use-package taoline
   :ensure t
-  ;; :straight (:host github :repo "11111000000/taoline")
   :config
   (taoline-mode 1))
 #+END_SRC
 
-Включить режим можно командой:
+Чтобы включить taoline:
 
 #+BEGIN_SRC emacs-lisp
 (taoline-mode 1)
 #+END_SRC
 
-** Настройка и расширение
+** Индивидуальная настройка: танец сегментов
 
-Все настройки доступны через
-
-#+BEGIN_SRC emacs-lisp
-(customize-group 'taoline)
-#+END_SRC
-
-или напрямую:
-
-*** Пример настройки сегментов и внешнего вида
+Все сегменты собираются в списке `taoline-segments`. Каждый записан как чистая функция (buffer → string):
 
 #+BEGIN_SRC emacs-lisp
 (setq taoline-segments
-      '((:left  taoline-segment-git-branch taoline-segment-buffer-name)
-        (:right taoline-segment-major-mode taoline-segment-time)))
-
-(setq taoline-display-backend 'echo) ;; варианты: 'modeline, 'echo, 'header, 'posframe
+      '((:left taoline-segment-icon-and-buffer taoline-segment-git-branch)
+        (:center taoline-segment-echo-message)
+        (:right taoline-segment-project-name taoline-segment-time)))
 #+END_SRC
 
-*** Смена способа отображения (backend) на лету
+Менять порядок, добавлять и убирать сегменты — просто редактируй этот список. Левый (:left), центральный (:center), правый (:right) блоки — между ними пространство возникнет, если нужно.
 
-Можно сменить способ отображения без выключения режима:
+** Медитирующий над расширением: как создать свой сегмент
 
-#+BEGIN_SRC emacs-lisp
-(taoline-set-backend 'header)
-#+END_SRC
-
-*** Добавление пользовательского сегмента
-
-Все сегменты — чистые функции с сигнатурой (buffer) → string. Для регистрации нового сегмента используйте макрос:
+Каждая часть taoline — отдельная функция, не касающаяся ни других, ни глобального мира. Создать новый сегмент — дело одной запятой:
 
 #+BEGIN_SRC emacs-lisp
 (taoline-define-segment taoline-segment-buffer-size (buffer)
   "Показывает размер буфера."
   (format "%.1fK" (/ (buffer-size buffer) 1024.0)))
+#+END_SRC
 
-;; Добавить к правым сегментам
+Затем добавь его в нужный раздел:
+
+#+BEGIN_SRC emacs-lisp
 (push 'taoline-segment-buffer-size (alist-get :right taoline-segments))
 #+END_SRC
 
-** FAQ
+** Пусть echo area течёт спокойно
 
-- *Taoline отключил стандартную modeline, исчез индикатор записи/режимы!*  
-  <b>Это ожидаемо:</b> taoline полностью скрывает mode-line ради чистоты интерфейса. Используйте кастомные сегменты для возврата нужных индикаторов, если надо.
+Taoline показывает себя в echo area только тогда, когда там нет других сообщений. Всё, что важнее — например, minibuffer, isearch или ваши сообщения — имеет приоритет. Стандартная modeline скрывается (если хочется — это поведение опционально).
 
-- *Echo area «затирается» сообщениями Emacs!*
-  Taoline занимает echo area только если она пуста. Как только появляется пользовательское сообщение, taoline временно скрывается.
+** Частые вопросы
 
-- *Как вернуть обычную mode-line?*
-  Просто выключите taoline-mode командой <kbd>M-x taoline-mode</kbd>.
+- *Где моя mode-line?*  
+  Исчезла в знак уважения к Пустоте. Она вернётся, когда отключишь `taoline-mode`.
 
-** Разработка и вклад
+- *Почему иногда сообщение taoline исчезает?*  
+  Когда Emacs чем-то занят — выводит свои уведомления или работает minibuffer — taoline уступает дорогу.
 
-- Документация на GitHub: https://github.com/11111000000/taoline
-- Вся логика разбита на фунции и минимально зависит от состояния Emacs.
-- Для глубокого расширения: читайте исходный код, смотрите макросы и таблицу сегментов.
+- *Как добавить что-то своё?*  
+  Просто напиши функцию (buffer) → string, зарегистрируй через `taoline-define-segment`, и помести симовол этой функции в нужном месте списка сегментов.
 
-** Пример скриншота
+** Где учиться искусству taoline?
+
+Загляни в исходный код или на [GitHub](https://github.com/11111000000/taoline) — там всё ясно и предельно лаконично. Логи работы (если нужно) в буфере `*taoline-logs*`.
+
+** Пример работы
 
 #+ATTR_ORG: :width 80%
 [[file:screenshot-taoline.png]]
 
-** Лицензия
+---
 
-© Peter, 11111000000@email.com
-
-
+Пустое пространство в строке — место для тишины.
